# knative-dash

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.claude/skills/plan-task/: SKILL.md
.claude/skills/research-task/: SKILL.md
.claude/skills/tdd/: SKILL.md  deep-modules.md  interface-design.md  mocking.md  refactoring.md  tests.md
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  logic.rs  main.rs  types.rs  watcher.rs
src/components/: LogViewer.tsx  NamespaceSelector.tsx  PingResult.tsx  ServiceCard.tsx  ServiceList.tsx
