[package]
name = "knative-dash"
version = "0.1.0"
description = "A Toolbar App for Monitoring Knative functions"
authors = ["Daniel Michaels"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "knative_dash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kube = { version = "3.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27", features = ["latest", "schemars"] }
schemars = { version = "1" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
